Changelog
=========

0.3 (unreleased)
----------------

- Performing a ``KeyboardInterrupt`` while connecting
  to a resource now ask for simply skipping that resource

0.2 (2014-01-02)
----------------

- Do not crawl or download when on error pages
- Handle duplicate filename when downloading resources:
  added the ``--check-duplicate`` option
- Application specific user agent header (configurable
  through ``--user-agent`` option)
- The ``--directory`` option can be a path and so create
  intermediate directories, and accept markers
- More efficient memory usage
- Show progress bar when getting resources
  (now requires `progress`__)
- Fixed problem when getting quoted filename from response
  header
- Added the ``--timeout`` option
- Added the ``--sleep`` option

__ https://pypi.python.org/pypi/progress

0.1 (2013-01-05)
----------------

- first release