@@ -6,6 +6,7 @@ Changelog
 
 - Performing a ``KeyboardInterrupt`` while connecting
   to a resource now ask for simply skipping that resource
+- Added the ``--offset`` option
 
 0.2 (2014-01-02)
 ----------------
